# metmac

./: Cargo.toml  Makefile  README.md
migrations/: 001_initial_schema.sql  002_supporting_stats.sql  003_remove_window_title.sql
src/: lib.rs  main.rs
src/input/: keyboard.rs
src/models/: events.rs  stats.rs
src/storage/: buffer.rs  connection.rs
src/storage/migrations/: 001_initial_schema.sql
src/system/: windows.rs
static/: index.html
