[package]
name = "metmac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
directories = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
rdev = "0.5.3"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio",
    "tls-rustls",
    "sqlite",
    "migrate"
] }
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
objc2-app-kit = "0.3.0"
objc2 = "0.6.0"
core-foundation = "0.10.0"
core-graphics = "0.24.0"
core-foundation-sys = "0.8.7"
objc2-foundation = "0.3.0"

